tests/errors/too_many_parms.vpl
func sixPar(a,b,c,d,e,f)
end
